--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,21 @@
-APP_NAME=Laravel
+APP_NAME=VueSchool
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://vueschool-exercise.test
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=vueschool
 DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -44,3 +44,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SUBSCRIBERS_SERVICE_FREQUENCY="* * * * *"
+SUBSCRIBERS_BATCH_MAX_ITEMS=5
+SUBSCRIBERS_QUEUE_BATCH_QUANTITY=3
